@@ -3,7 +3,7 @@
  *
  * https://minecraftdev.org
  *
- * Copyright (c) 2022 minecraft-dev
+ * Copyright (c) 2021 minecraft-dev
  *
  * MIT License
  */
@@ -14,17 +14,17 @@ import org.gradle.internal.os.OperatingSystem
 import org.jetbrains.gradle.ext.settings
 import org.jetbrains.gradle.ext.taskTriggers
 import org.jetbrains.kotlin.gradle.tasks.KotlinCompile
-import org.jlleitschuh.gradle.ktlint.tasks.BaseKtLintCheckTask
 
 plugins {
-    kotlin("jvm") version "1.7.20"
+    kotlin("jvm") version "1.7.10"
+    kotlin("plugin.serialization") version "1.7.10"
     java
     mcdev
     groovy
     idea
     id("org.jetbrains.intellij") version "1.9.0"
     id("org.cadixdev.licenser")
-    id("org.jlleitschuh.gradle.ktlint") version "10.3.0"
+//    id("org.jlleitschuh.gradle.ktlint") version "10.3.0"
 }
 
 val ideaVersionName: String by project
@@ -41,9 +41,10 @@ version = "$ideaVersionName-$coreVersion"
 
 java {
     toolchain {
-        languageVersion.set(JavaLanguageVersion.of(11))
+        languageVersion.set(JavaLanguageVersion.of(17))
     }
 }
+
 kotlin {
     jvmToolchain {
         languageVersion.set(java.toolchain.languageVersion.get())
@@ -62,30 +63,20 @@ val gradleToolingExtensionJar = tasks.register<Jar>(gradleToolingExtensionSource
 
 repositories {
     maven("https://repo.denwav.dev/repository/maven-public/")
-    maven("https://maven.fabricmc.net/") {
-        content {
-            includeModule("net.fabricmc", "mapping-io")
-        }
-    }
     mavenCentral()
 }
 
 dependencies {
     // Add tools.jar for the JDI API
     implementation(files(Jvm.current().toolsJar))
+    implementation("com.charleskorn.kaml:kaml:0.48.0")
 
     // Kotlin
     implementation(kotlin("stdlib-jdk8"))
     implementation(kotlin("reflect"))
     implementation(libs.bundles.coroutines)
-
     implementation(files(gradleToolingExtensionJar))
-
-    implementation(libs.templateMakerFabric)
-    implementation(libs.mappingIo)
     implementation(libs.bundles.asm)
-
-    implementation(libs.bundles.fuel)
 
     jflex(libs.jflex.lib)
     jflexSkeleton(libs.jflex.skeleton) {
@@ -95,55 +86,14 @@ dependencies {
     }
     grammarKit(libs.grammarKit)
 
-    testLibs(libs.test.mockJdk)
-    testLibs(libs.test.mixin)
-    testLibs(libs.test.spongeapi) {
-        artifact {
-            classifier = "shaded"
-        }
-    }
-    testLibs(libs.test.nbt) {
-        artifact {
-            extension = "nbt"
-        }
-    }
-    testLibs(projects.mixinTestData)
-
     // For non-SNAPSHOT versions (unless Jetbrains fixes this...) find the version with:
-    // afterEvaluate { println(intellij.ideaDependency.buildNumber.substring(intellij.type.length + 1)) }
+    // afterEvaluate { println(intellij.ideaDependency.get().buildNumber.substring(intellij.type.get().length + 1)) }
     gradleToolingExtension(libs.groovy)
     gradleToolingExtension(libs.gradleToolingExtension)
     gradleToolingExtension(libs.annotations)
 
     testImplementation(libs.junit.api)
     testRuntimeOnly(libs.junit.entine)
-}
-
-val artifactType = Attribute.of("artifactType", String::class.java)
-val filtered = Attribute.of("filtered", Boolean::class.javaObjectType)
-
-dependencies {
-    attributesSchema {
-        attribute(filtered)
-    }
-    artifactTypes.getByName("jar") {
-        attributes.attribute(filtered, false)
-    }
-
-    registerTransform(Filter::class) {
-        from.attribute(filtered, false).attribute(artifactType, "jar")
-        to.attribute(filtered, true).attribute(artifactType, "jar")
-
-        parameters {
-            ideaVersion.set(providers.gradleProperty("ideaVersion"))
-            ideaVersionName.set(providers.gradleProperty("ideaVersionName"))
-            depsFile.set(layout.projectDirectory.file(".gradle/intellij-deps.json"))
-        }
-    }
-}
-
-configurations.compileClasspath {
-    attributes.attribute(filtered, true)
 }
 
 intellij {
@@ -153,7 +103,9 @@ intellij {
     plugins.addAll(
         "java",
         "maven",
+        "yaml",
         "gradle",
+        "ant",
         "Groovy",
         "org.toml.lang:$pluginTomlVersion",
         "ByteCodeViewer",
@@ -162,7 +114,7 @@ intellij {
         "junit"
     )
 
-    pluginName.set("Minecraft Development")
+    pluginName.set("MineAcademy Development")
     updateSinceUntilBuild.set(true)
 
     downloadSources.set(providers.gradleProperty("downloadIdeaSources").map { it.toBoolean() })
@@ -185,22 +137,17 @@ tasks.runPluginVerifier {
     ideVersions.addAll("IC-$ideaVersionName")
 }
 
-java {
-    toolchain {
-        languageVersion.set(JavaLanguageVersion.of(11))
-    }
-}
-
 tasks.withType<JavaCompile>().configureEach {
     options.encoding = "UTF-8"
     options.compilerArgs = listOf("-proc:none")
-    options.release.set(11)
+    options.release.set(17)
 }
 
 tasks.withType<KotlinCompile>().configureEach {
     kotlinOptions {
-        jvmTarget = JavaVersion.VERSION_11.toString()
-        freeCompilerArgs = listOf("-Xuse-k2", "-Xjvm-default=all", "-Xjdk-release=11")
+        jvmTarget = JavaVersion.VERSION_17.toString()
+        // K2 causes the following error: https://youtrack.jetbrains.com/issue/KT-52786
+        freeCompilerArgs = listOf(/*"-Xuse-k2", */"-Xjvm-default=all", "-Xjdk-release=17")
         kotlinDaemonJvmArguments.add("-Xmx2G")
     }
 }
@@ -209,11 +156,9 @@ tasks.withType<KotlinCompile>().configureEach {
 // This is for maximum compatibility, these classes will be loaded into every Gradle import on all
 // projects (not just Minecraft), so we don't want to break that with an incompatible class version.
 tasks.named(gradleToolingExtensionSourceSet.compileJavaTaskName, JavaCompile::class) {
-    val java7Compiler = javaToolchains.compilerFor { languageVersion.set(JavaLanguageVersion.of(8)) }
+    val java7Compiler = javaToolchains.compilerFor { languageVersion.set(JavaLanguageVersion.of(17)) }
     javaCompiler.set(java7Compiler)
-    options.release.set(null as Int?)
-    sourceCompatibility = "1.5"
-    targetCompatibility = "1.5"
+    options.release.set(6)
     options.bootstrapClasspath = files(java7Compiler.map { it.metadata.installationPath.file("jre/lib/rt.jar") })
     options.compilerArgs = listOf("-Xlint:-options")
 }
@@ -240,43 +185,11 @@ tasks.processResources {
     }
 }
 
-tasks.test {
-    dependsOn(tasks.jar, testLibs)
-    useJUnitPlatform()
-    doFirst {
-        testLibs.resolvedConfiguration.resolvedArtifacts.forEach {
-            systemProperty("testLibs.${it.name}", it.file.absolutePath)
-        }
-    }
-    systemProperty("NO_FS_ROOTS_ACCESS_CHECK", "true")
-
-    jvmArgs(
-        "--add-opens", "java.base/java.io=ALL-UNNAMED",
-        "--add-opens", "java.base/java.lang.invoke=ALL-UNNAMED",
-        "--add-opens", "java.base/java.lang.ref=ALL-UNNAMED",
-        "--add-opens", "java.base/java.lang.reflect=ALL-UNNAMED",
-        "--add-opens", "java.base/java.lang=ALL-UNNAMED",
-        "--add-opens", "java.base/java.util.concurrent.atomic=ALL-UNNAMED",
-        "--add-opens", "java.base/java.util.concurrent.locks=ALL-UNNAMED",
-        "--add-opens", "java.base/java.util.concurrent=ALL-UNNAMED",
-        "--add-opens", "java.base/sun.nio.fs=ALL-UNNAMED",
-        "--add-opens", "java.desktop/java.awt.event=ALL-UNNAMED",
-        "--add-opens", "java.desktop/java.awt=ALL-UNNAMED",
-        "--add-opens", "java.desktop/javax.swing.plaf.basic=ALL-UNNAMED",
-        "--add-opens", "java.desktop/javax.swing=ALL-UNNAMED",
-        "--add-opens", "java.desktop/sun.awt=ALL-UNNAMED",
-        "--add-opens", "java.desktop/sun.font=ALL-UNNAMED",
-        "--add-opens", "java.desktop/sun.swing=ALL-UNNAMED",
-    )
-}
-
 idea {
     project.settings.taskTriggers.afterSync("generate")
     module {
         generatedSourceDirs.add(file("build/gen"))
         excludeDirs.add(file(intellij.sandboxDir.get()))
-        isDownloadJavadoc = true
-        isDownloadSources = true
     }
 }
 
@@ -287,8 +200,6 @@ license {
 
     val endings = listOf("java", "kt", "kts", "groovy", "gradle.kts", "xml", "properties", "html", "flex", "bnf")
     include(endings.map { "**/*.$it" })
-
-    exclude("com/demonwav/mcdev/platform/mixin/invalidInjectorMethodSignature/*.java")
 
     tasks {
         register("gradle") {
@@ -313,47 +224,23 @@ license {
     }
 }
 
-tasks.withType<BaseKtLintCheckTask>().configureEach {
-    workerMaxHeapSize.set("512m")
-}
+//ktlint {
+//    enableExperimentalRules.set(true)
+//}
 
-tasks.register("format") {
-    group = "minecraft"
-    description = "Formats source code according to project style"
-    val licenseFormat by tasks.existing
-    val ktlintFormat by tasks.existing
-    dependsOn(licenseFormat, ktlintFormat)
-}
+//tasks.register("format") {
+//    group = "minecraft"
+//    description = "Formats source code according to project style"
+//    val licenseFormat by tasks.existing
+//    val ktlintFormat by tasks.existing
+//    dependsOn(licenseFormat, ktlintFormat)
+//}
 
-val generateAtLexer by lexer("AtLexer", "com/demonwav/mcdev/platform/mcp/at/gen")
-val generateAtParser by parser("AtParser", "com/demonwav/mcdev/platform/mcp/at/gen")
-
-val generateAwLexer by lexer("AwLexer", "com/demonwav/mcdev/platform/mcp/aw/gen")
-val generateAwParser by parser("AwParser", "com/demonwav/mcdev/platform/mcp/aw/gen")
-
-val generateNbttLexer by lexer("NbttLexer", "com/demonwav/mcdev/nbt/lang/gen")
-val generateNbttParser by parser("NbttParser", "com/demonwav/mcdev/nbt/lang/gen")
-
-val generateLangLexer by lexer("LangLexer", "com/demonwav/mcdev/translations/lang/gen")
-val generateLangParser by parser("LangParser", "com/demonwav/mcdev/translations/lang/gen")
-
-val generateTranslationTemplateLexer by lexer("TranslationTemplateLexer", "com/demonwav/mcdev/translations/lang/gen")
 
 val generate by tasks.registering {
     group = "minecraft"
     description = "Generates sources needed to compile the plugin."
     outputs.dir(layout.buildDirectory.dir("gen"))
-    dependsOn(
-        generateAtLexer,
-        generateAtParser,
-        generateAwLexer,
-        generateAwParser,
-        generateNbttLexer,
-        generateNbttParser,
-        generateLangLexer,
-        generateLangParser,
-        generateTranslationTemplateLexer
-    )
 }
 
 sourceSets.main { java.srcDir(generate) }
@@ -368,16 +255,13 @@ tasks.register("cleanSandbox", Delete::class) {
 }
 
 tasks.runIde {
-    maxHeapSize = "4G"
+    maxHeapSize = "2G"
 
     jvmArgs("--add-exports=java.base/jdk.internal.vm=ALL-UNNAMED")
     System.getProperty("debug")?.let {
         systemProperty("idea.ProcessCanceledException", "disabled")
         systemProperty("idea.debug.mode", "true")
     }
-    // Set these properties to test different languages
-    // systemProperty("user.language", "en")
-    // systemProperty("user.country", "US")
 }
 
 tasks.buildSearchableOptions {
